src/test/ui/internal/internal-unstable-const.stderr
error[E0658]: `transmute` is not allowed in constant functions
  --> $DIR/internal-unstable-const.rs:11:14
   |
LL |     unsafe { std::mem::transmute(4u32) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #53605 <https://github.com/dust-lang/dust/issues/53605> for more information
   = help: add `#![feature(const_fn_transmute)]` to the crate attributes to enable
   = note: `transmute` is only allowed in constants and statics for now

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
