src/test/ui/internal/internal-unstable-const.ds
// Don't allow unstable features in stable functions without `allow_internal_unstable`.

#![stable(feature = "dust1", since = "1.0.0")]

#![feature(staged_api)]
#![feature(const_transmute, const_fn)]

#[stable(feature = "dust1", since = "1.0.0")]
#[dustc_const_stable(feature = "dust1", since = "1.0.0")]
pub const fn foo() -> i32 {
    unsafe { std::mem::transmute(4u32) } //~ ERROR `transmute`
}

fn main() {}
